Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68337

[Reg : 5.10.1-> 5.11.0]QDir().absoluteFilePath() no longer recognizes resources

XMLWordPrintable

    • 27f1f84c1c220c5dadc739d5b056ec0f1b9f63a6

      There appears to be a regression issue with recognizing resource path names, in Qt5.10.1, the code: QDir().absoluteFilePath(":/abc.txt") would return ":/abc.txt".
      However, in Qt5.11.0 the string is expanded to something like:
      "C:/Tickets/build-AbsolutePathIssue-Desktop_Qt_5_11_0_MSVC2017_64bit4-Debug/:/abc.txt"

      Steps to Reproduce:

      1. Run the attached project on Qt 5.11.0

      Expected Result:

      The output should be - ":/abc.txt"

      Actual result: 

      "C:/Tickets/build-AbsolutePathIssue-Desktop_Qt_5_11_0_MSVC2017_64bit4-Debug/:/abc.txt"

      This is working fine in Qt 5.10.1

        1. qtbug68337.zip
          1.0 kB
          Shveta Mittal
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Eddy Edward Welbourne
            shmittal Shveta Mittal
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes